plugins/xpath/xpath-lang/testData/xpath2/highlighting/intersectOperatorNotApplicable.xpath2
<error descr="Operator 'intersect' cannot be applied to expressions of type 'xs:string'">'abc' intersect .</error>